--- a/CSharpHomework.csproj
+++ b/CSharpHomework.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Homework\BaseHomework.cs" />
     <Compile Include="Homework\HW1.cs" />
+    <Compile Include="Homework\HW2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongExtension.cs" />
