--- a/CSharpHomework.csproj
+++ b/CSharpHomework.csproj
@@ -54,6 +54,23 @@
     <Compile Include="Homework\HW5.cs" />
     <Compile Include="Homework\HW6.cs" />
     <Compile Include="Homework\HW7.cs" />
+    <Compile Include="Homework\THW1.cs" />
+    <Compile Include="Homework\THW10.cs" />
+    <Compile Include="Homework\THW11.cs" />
+    <Compile Include="Homework\THW12.cs" />
+    <Compile Include="Homework\THW13.cs" />
+    <Compile Include="Homework\THW14.cs" />
+    <Compile Include="Homework\THW15.cs" />
+    <Compile Include="Homework\THW16.cs" />
+    <Compile Include="Homework\THW17.cs" />
+    <Compile Include="Homework\THW2.cs" />
+    <Compile Include="Homework\THW3.cs" />
+    <Compile Include="Homework\THW4.cs" />
+    <Compile Include="Homework\THW5.cs" />
+    <Compile Include="Homework\THW6.cs" />
+    <Compile Include="Homework\THW7.cs" />
+    <Compile Include="Homework\THW8.cs" />
+    <Compile Include="Homework\THW9.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThongExtension.cs" />
